--- a/templates/fashionpointapp/index.html
+++ b/templates/fashionpointapp/index.html
@@ -1,61 +1,11 @@
-{% extends 'rango/base.html' %}
+{% extends 'fashionpointapp/base.html' %}
 {% load staticfiles %}
 
 {% block title_block %}
-    Rango
+ FashionPoint
 
 {% endblock %}
 
 {% block body_block %}
-
-
-
-    <h1>Rango says...</h1>
-<div>
-    {% if user.is_authenticated %}
-howdy {{ user.username }}!
-{% else %}
-hey there partner!
-{% endif %}
-</div>
-    <div>
-    <h2>Most Liked Categories</h2>
-    {% if categories %}
-    <ul>
-        {% for category in categories %}
-        <li>
-        <a href="{% url 'show_category' category.slug %}" >
-            {{ category.name }}
-        </a>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-        <strong>There are no categories present.</strong>
-    {% endif %}
-    </div>
-
-
-    <div>
-     <h2>Most Viewed Pages</h2>
-      {% if pages %}
-        <ul>
-        {% for page in pages %}
-        <li>
-        <a href="{{ page.url }}">{{ page.title }}</a>
-        </li>
-        {% endfor %}
-
-        </ul>
-
-    {% else %}
-        <strong>There are no categories present.</strong>
-    {% endif %}
-
-    </div>
-
-    <div>
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-    </div>
-    <p>visits: {{ visits }}</p>
+    Well Hallo Motherfuckers
 {% endblock %}
