--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -7,22 +7,27 @@
 
 #white{
 	color: white;
-	
+
 }
 
 #logo{
 	height: 100px;
-	width:500px ;
+	width: 500px;
+  padding-left: 20px;
 }
-
-
 
 
 /* Add a black background color to the top navigation bar */
 .topnav {
   overflow: hidden;
   background-color: white;
+  width: 87%;
+  border-radius: 1em;
+  left: 50px;
+  margin-left: 20px;
+
 }
+
 
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -45,23 +50,6 @@
 .topnav a.active {
   background-color: #2196F3;
   color: white;
-}
-
-
-
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
 }
 
 /* Place the navbar at the bottom of the page, and make it stick */
@@ -93,3 +81,15 @@
   background-color: #ddd;
   color: black;
 }
+
+#btt {
+  float: right ;
+  position: relative;
+  top: -50px ; 
+  padding: 15px 15px 15px 15px ; 
+  margin-left: 10px;
+  border-radius: 5em ; 
+  border-color: blue ; 
+  border-width: 10;
+}
+
