--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -42,7 +42,11 @@
             {% endblock %}
         </div>
 
-  
+
+  <div>
+	{% block list %}
+    {% endblock %}
+</div>
 
      
 		<div class="navbar">
