--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -25,6 +25,7 @@
   border-radius: 1em;
   left: 50px;
   margin-left: 20px;
+  box-shadow: 3px 6px;
 
 }
 
@@ -87,9 +88,10 @@
   position: relative;
   top: -50px ; 
   padding: 15px 15px 15px 15px ; 
-  margin-left: 10px;
-  border-radius: 5em ; 
-  border-color: blue ; 
-  border-width: 10;
+  margin-left: 8px;
+  border-color: black ; 
+  text-decoration-color: black ; 
+  font-size: 13px;
+  box-shadow: 3px 6px;
 }
 
