bottom bar pages

--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -51,9 +51,9 @@
      
 		<div class="navbar">
 			<hr />
-			<a href="">Contact Us</a>
-			<a href="">About us</a>
-			<a href="">Site Map</a>
+			<a href="{% url 'contact_us' %}">Contact Us</a>
+			<a href="{% url 'about_us' %}">About us</a>
+			<a href="{% url 'sitemap' %}">Site Map</a>
 		</div>
 	 
 	 
