--- a/templates/fashionpointapp/sitemap.html
+++ b/templates/fashionpointapp/sitemap.html
@@ -2,14 +2,13 @@
 {% load staticfiles %}
 
 {% block title_block %}
- Contact fashionPoint
+	FashionPoint sitemap
 
 {% endblock %}
 
 {% block body_block %}
-
-
+	
+	<br />
     <img src="{% static "images/sitemap.jpg"%}" />.
 
-   
 {% endblock %}
