--- a/templates/fashionpointapp/index.html
+++ b/templates/fashionpointapp/index.html
@@ -8,8 +8,16 @@
 
 {% block body_block %}
 
+	<div class="main">
+		<p id="white"> Welcome </p>
+	</div>
 
-    <p id="white"> Welcome </p>
+    <div class="sidenav">
+    	<a href="#">About</a>
+    	<a href="#">Services</a>
+    	<a href="#">Clients</a>
+    	<a href="#">Contact</a>
+    </div>
 
 
    
