--- a/templates/fashionpointapp/index.html
+++ b/templates/fashionpointapp/index.html
@@ -13,10 +13,10 @@
 	</div>
 
     <div class="sidenav">
-    	<a href="#">About</a>
-    	<a href="#">Services</a>
-    	<a href="#">Clients</a>
-    	<a href="#">Contact</a>
+    	<a href="#">test</a>
+    	<a href="#">test</a>
+    	<a href="#">test</a>
+    	<a href="#">test</a>
     </div>
 
 
