--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -103,15 +103,15 @@
   right: 10px;
   background: #eee;
   overflow-x: hidden;
-  padding: 0px 8px;
+  padding: 0px 0px;
   margin-top: 200px;
 }
 
 .sidenav a {
-  padding: 6px 8px 6px 16px;
+  padding: 10px 5px 10px -5px;
   text-decoration: none;
-  font-size: 25px;
-  color: #2196F3;
+  font-size: 15px;
+  color: #000000;
   display: block;
 }
 
