--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -87,9 +87,10 @@
   position: relative;
   top: -50px ; 
   padding: 15px 15px 15px 15px ; 
-  margin-left: 10px;
+  margin-left: 5px;
   border-radius: 5em ; 
-  border-color: blue ; 
-  border-width: 10;
+  border-color: black ; 
+  border-width: 15;
+ 
 }
 
