--- a/templates/fashionpointapp/cats.html
+++ b/templates/fashionpointapp/cats.html
@@ -3,10 +3,14 @@
     {% for c in cats %}
         {% if c == act_cat %}
             <strong>
-                <a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
+                <a class=link href="{% url 'show_category' c.slug %}">{{ c.name }}</a>\
+
             </strong>
         {% else %}
-                <a  href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
+                <br/>
+                <br/>
+                <br/>
+                <a class=link href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
         {% endif %}
     {% endfor %}
 {% else %}
