--- a/templates/fashionpointapp/category.html
+++ b/templates/fashionpointapp/category.html
@@ -16,7 +16,7 @@
 {% block body_block %}
 
 
-    <h1 class='main' id="white"> {{ category.name }} </h1>
+    <h1 class='main' id="white""> {{ category.name }} </h1>
 	{% block list %}
 	<div class="sidenav">
 		{% get_category_list category %}
