--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -24,7 +24,7 @@
   width: 86%;
   border-radius: 1em;
   left: 50px;
-  margin-left: 20px;
+  margin-left: 14px;
   box-shadow: 3px 6px;
 
 }
@@ -100,20 +100,34 @@
   position: fixed;
   z-index: 1;
   top: 20px;
-  right: 10px;
+  right: 20px;
   background: #eee;
   overflow-x: hidden;
   padding: 8px 0px;
   margin-top: 200px;
+  border-radius: 15px;
 }
 
 .sidenav a {
-  margin-left: -15px;
+  margin-left: -10px;
   margin-center: 0px;
   text-decoration: none;
   font-size: 15px;
   color: #000000;
   display: block;
+}
+.sidenav a {
+  margin-left: -10px;
+  margin-center: 0px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #000000;
+  display: block;
+}
+.sidenav h {
+  margin-left: -25px;
+  font-size: 20px;
+  color: #000000;
 }
 
 .sidenav a:hover {
@@ -123,7 +137,7 @@
 .main {
   margin-right: 140px; /* Same width as the sidebar + left position in px */
   font-size: 28px; /* Increased text to enable scrolling */
-  padding: 10px 0px;
+  padding: 10px 0px 0px 25px;
 }
 
 @media screen and (max-height: 450px) {
