--- a/templates/fashionpointapp/categories.html
+++ b/templates/fashionpointapp/categories.html
@@ -17,7 +17,7 @@
     {% endblock %}
 
 {% block body_block %}
-    <h1 id="white"> Categories </h1>
+    <h1 class="main" id="white"> Categories </h1>
 {% endblock %}
 
 
