--- a/templates/fashionpointapp/cats.html
+++ b/templates/fashionpointapp/cats.html
@@ -1,4 +1,8 @@
 <ul>
+    <strong>
+ <h>Categories</h>
+        </strong>
+<hr style="color: black; margin-left:-25px; margin-right:15px;"></hr>
 {% if cats %}
     {% for c in cats %}
         {% if c == act_cat %}
