--- a/templates/fashionpointapp/about.html
+++ b/templates/fashionpointapp/about.html
@@ -11,5 +11,9 @@
 
     <p id="white"> We are: <br/> Anas Yahya <br/> Adham Saheb <br/> Ahmad Sawi <br/> Noura Abulaban</p>
 
+    <strong>
+    	    <a href="https://www.youtube.com/watch?v=ECewrAld3zw" style="color:white; font-size: 40px;">Click me for chills!</a>>
+    </strong>
+
    
 {% endblock %}
