--- a/templates/fashionpointapp/cats.html
+++ b/templates/fashionpointapp/cats.html
@@ -7,7 +7,7 @@
     {% for c in cats %}
         {% if c == act_cat %}
             <strong>
-                <a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>\
+                <a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
 
             </strong>
         {% else %}
