--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -27,12 +27,19 @@
             <div class="topnav">
         			<a class="active" href="{% url 'index' %}">Home</a>
         			<a href="{% url 'categories' %}">Categories</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'categories' %}">New Post</a>
+                        <a href="{% url 'categories' %}">New Poll</a>
+                        <a href="{% url 'categories' %}">My Account</a>
+                    {% endif %}
         	</div>
             {% endblock %}
-
-
-            <button id="btt" type="button">Log in</button>
-            <button id="btt" type="button">Sign up</button>
+            {% if user.is_authenticated %}
+               <button id="btt" type="button" onclick="window.location.href='{% url 'logout' %}'">Log out</button>
+            {% else %}
+                <button id="btt" type="button">Log in</button>
+                <button id="btt" type="button">Sign up</button>
+             {% endif %}
 
         </div>
 
