--- a/templates/fashionpointapp/category.html
+++ b/templates/fashionpointapp/category.html
@@ -9,6 +9,11 @@
 	<div class="topnav">
 		<a href="{% url 'index' %}">Home</a>
 		<a class="active" href="{% url 'categories' %}">Categories</a>
+		 {% if user.is_authenticated %}
+			<a href="{% url 'categories' %}">New Post</a>
+			<a href="{% url 'categories' %}">New Poll</a>
+			<a href="{% url 'categories' %}">My Account</a>
+		{% endif %}
 	</div>
 {% endblock %}
 
