--- a/templates/fashionpointapp/PostaPost.html
+++ b/templates/fashionpointapp/PostaPost.html
@@ -4,18 +4,18 @@
 
 
 {% block title_block %}
-    <p>A new post </p>
+    A new post
 {% endblock %}
 
 {% block body_block %}
 
 <form action="action_page.php">
   <div class="container">
-    <h1>Create a new post</h1>
+    <h1 id=mylabel >Create a new post</h1>
 
     <hr>
 
-    <label for="Post Discription"><b>Discription</b></label>
+    <label id=mylabel for="Post Discription"><b>Discription</b></label>
 
     <input type="text" placeholder="Type in your enquiry" name="Discription" required>
 
