--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -150,3 +150,60 @@
   .sidenav a {font-size: 18px;}
 }
 
+
+* {box-sizing: border-box}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Overwrite default styles of hr */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* Set a style for the submit/register button */
+.registerbtn {
+  background-color: #4CAF50;
+  color: white;
+  font-weight:bold ;
+  font-size:35px ;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.registerbtn:hover{
+  opacity:1;
+}
+
+#mylabel {
+  color:white ;
+  font-size:35px ;
+  font-weight:bold ;
+}
+
+/* Add a blue text color to links */
+a {
+  color: dodgerblue;
+}
