--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -28,7 +28,7 @@
         			<a class="active" href="{% url 'index' %}">Home</a>
         			<a href="{% url 'categories' %}">Categories</a>
                     {% if user.is_authenticated %}
-                        <a href="{% url 'categories' %}">New Post</a>
+                        <a href="{% url 'PostaPost' %}">New Post</a>
                         <a href="{% url 'categories' %}">New Poll</a>
                         <a href="{% url 'categories' %}">My Account</a>
                     {% endif %}
