--- a/templates/fashionpointapp/login.html
+++ b/templates/fashionpointapp/login.html
@@ -4,7 +4,10 @@
     Login
 {% endblock %}
 {% block body_block %}
+            <div style="color:white;">
+
 <h1>Sign in !</h1>
+
 <form id="login_form" method="post" action="{% url 'login' %}">
     {% csrf_token %}
     Username: <input type="text" name="username" value="" size="50" />
@@ -13,7 +16,9 @@
     <br />
     <input type="submit" value="submit" />
 </form>
+            </div>
 <div class="border-top pt-3">
+
             <small class="text-muted">
                 Do not have an account? <a class="ml-2" href="{% url 'signup' %}">Sign Up Now</a>
             </small>
