--- a/templates/fashionpointapp/cats.html
+++ b/templates/fashionpointapp/cats.html
@@ -1,8 +1,10 @@
 <ul>
     <strong>
  <h>Categories</h>
-        </strong>
-<hr style="color: black; margin-left:-25px; margin-right:15px;"></hr>
+    </strong>
+
+<hr id="line"></hr>
+
 {% if cats %}
     {% for c in cats %}
         {% if c == act_cat %}
