--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -173,11 +173,7 @@ input[type=text]:focus, input[type=password]:focus {
   outline: none;
 }
 
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
+
 
 /* Set a style for the submit/register button */
 .registerbtn {
@@ -207,3 +203,8 @@ hr {
 a {
   color: dodgerblue;
 }
+
+#line{
+style="color: black; margin-left:-25px; margin-right:15px;"
+}
+
