--- a/templates/fashionpointapp/PostaPost.html
+++ b/templates/fashionpointapp/PostaPost.html
@@ -1,12 +1,21 @@
 {% extends 'fashionpointapp/base.html' %}
 {% load staticfiles %}
-{% load fashionpointapp_template_tags %}
 
 
 {% block title_block %}
     A new post
 {% endblock %}
-
+ {% block top_bar %}
+            <div class="topnav">
+        			<a href="{% url 'index' %}">Home</a>
+        			<a href="{% url 'categories' %}">Categories</a>
+                    {% if user.is_authenticated %}
+                        <a class="active" href="{% url 'newpost' %}">New Post</a>
+                        <a href="{% url 'categories' %}">New Poll</a>
+                        <a href="{% url 'categories' %}">My Account</a>
+                    {% endif %}
+        	</div>
+            {% endblock %}
 {% block body_block %}
     <h1 id=mylabel >Create a new post</h1>
     <hr>
