--- a/templates/fashionpointapp/signup.html
+++ b/templates/fashionpointapp/signup.html
@@ -1,6 +1,20 @@
 {% extends 'fashionpointapp/base.html' %}
+{% load fashionpointapp_template_tags %}
 {% load staticfiles %}
-
+{% block title_block %}
+    Sign Up
+{% endblock %}
+{% block top_bar %}
+            <div class="topnav">
+        			<a href="{% url 'index' %}">Home</a>
+        			<a href="{% url 'categories' %}">Categories</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'newpost' %}">New Post</a>
+                        <a href="{% url 'categories' %}">New Poll</a>
+                        <a href="{% url 'categories' %}">My Account</a>
+                    {% endif %}
+        	</div>
+            {% endblock %}
 {% block body_block %}
             <div style="color:white;">
 
@@ -21,3 +35,9 @@
                 <div/>
 
 {% endblock %}
+
+ {% block list %}
+    <div class="sidenav">
+                {% get_category_list category %}
+    </div>
+    {% endblock %}
