--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -205,6 +205,8 @@ a {
 }
 
 #line{
-style="color: black; margin-left:-25px; margin-right:15px;"
+  color: black; 
+  margin-left: -25px; 
+  margin-right: 15px;
 }
 
