--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -15,7 +15,7 @@
             {% endblock %}
 
         </title>
-        <img id="logo" src="{% static "images/logo.png"%}" />.
+        <a href="{% url 'index' %}"> <img id="logo" src="{% static "images/logo.png"%}" /> <a/>
     </head>
 
     <body id="bg" style="background-image: url('{% static "images/background.jpg"%}')";>
