--- a/templates/fashionpointapp/cats.html
+++ b/templates/fashionpointapp/cats.html
@@ -3,7 +3,7 @@
  <h>Categories</h>
     </strong>
 
-<hr id="line"></hr>
+<hr style="color: black; margin-left: -25px; margin-right: 15px;"></hr>
 
 {% if cats %}
     {% for c in cats %}
