--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+
+
+
 #bg{
     background-size: 1800px 900px;
     background-repeat: no-repeat;
@@ -54,21 +59,21 @@
 
 /* Place the navbar at the bottom of the page, and make it stick */
 .navbar {
-  
+
   overflow: hidden;
-  position: fixed;
+
   bottom: 0;
   width: 100%;
 }
 
 /* Style the links inside the navigation bar */
 .navbar a {
-  
+
   float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 190px ;
+  padding: 14px 170px ;
   text-decoration: none;
   font-size: 17px;
   align-content : center; 
@@ -209,4 +214,7 @@ a {
   margin-left: -25px; 
   margin-right: 15px;
 }
+
+
+/* ------------------------------------------------Form css */
 
