--- a/templates/fashionpointapp/login.html
+++ b/templates/fashionpointapp/login.html
@@ -15,23 +15,25 @@
         	</div>
 {% endblock %}
 {% block body_block %}
-            <div style="color:white;">
+           <div class="wrapper fadeInDown">
+           <link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/login.css' %}">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+    <h2 class="active"> Sign In </h2>
+    <!-- Icon -->
 
-<h1>Sign in !</h1>
 
-<form id="login_form" method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    Username: <input type="text" name="username" value="" size="50" />
-    <br />
-    Password: <input type="password" name="password" value="" size="50" />
-    <br />
-    <input type="submit" value="submit" />
-</form>
-            </div>
-<div class="border-top pt-3">
+    <!-- Login Form -->
+    <form id="login_form" method="post" action="{% url 'login' %}">
 
-            <small class="text-muted">
-                Do not have an account? <a class="ml-2" href="{% url 'signup' %}">Sign Up Now</a>
-            </small>
+        {% csrf_token %}
+     username: <input type="text" id="login" class="fadeIn second" name="username" placeholder="login">
+     password: <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
+
+
+      <input type="submit" class="fadeIn fourth" value="Log In">
+    </form>
+
+  </div>
 </div>
 {% endblock %}
