--- a/static/fashionpointapp/form.css
+++ b/static/fashionpointapp/form.css
@@ -3,11 +3,20 @@
 
 }
 
-.whitehead label , textarea , h3 {
+.whitehead label  {
     color: white;
 	font-family: 'Dancing Script', cursive;
 	font-size: 20px;
 	margin-bottom: 30px;
+}
+
+.whitehead span {
+
+     color: white;
+	font-family: 'Dancing Script', cursive;
+	font-size: 12px;
+	margin-bottom: 30px;
+
 }
 
 h3{
@@ -25,6 +34,11 @@ color: white;
     opacity: 0;
     transform: translate3d(0, 500px, 0);
     animation: arrive 500ms ease-in-out 0.7s forwards;
+}
+
+.user__header img {
+     filter:gray(200%);
+
 }
 
 .user__title {
