--- a/templates/fashionpointapp/login.html
+++ b/templates/fashionpointapp/login.html
@@ -23,30 +23,18 @@
     <!-- Icon -->
 
 
-<<<<<<< HEAD
-    <!-- Login Form -->
+
     <form id="login_form" method="post" action="{% url 'login' %}">
-=======
+
 <form id="login_form" method="post" action="{% url 'login' %}">
     {% csrf_token %}
     Username: <input type="text" name="username" value="" size="50" />
     <br />
     Password: <input type="password" name="password" value="" size="50" />
     <br />
-    <input type="submit" value="submit" />
+    <input type="submit" value="Log in" />
 </form>
 </div>
-<div class="border-top pt-3">
->>>>>>> f51732c485b38def5ccd31c7fdef3eb4ace63db3
 
-        {% csrf_token %}
-     username: <input type="text" id="login" class="fadeIn second" name="username" placeholder="login">
-     password: <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
-
-
-      <input type="submit" class="fadeIn fourth" value="Log In">
-    </form>
-
-  </div>
 </div>
 {% endblock %}
