--- a/templates/fashionpointapp/PostaPost.html
+++ b/templates/fashionpointapp/PostaPost.html
@@ -7,25 +7,21 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1 id=mylabel >Create a new post</h1>
-    <hr>
+<link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/form.css' %}">
+    <div class="user">
+          <div id="formContent">
+
+<header style='margin: 0px 8px 0px 8px;' class="user__header">
+        <h2 class="active">Create a Post</h2>
+    </header>
 
 <form  id="PostForm" method="post" action="/fashionpoint/newpost/"  enctype="multipart/form-data">
         {% csrf_token %}
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
-
-        {% for field in form.visible_fields %}
-            <div style="color:white;">
-                {{ form.path }}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            </div>
-        {% endfor %}
-
-    <button type="submit" class="registerbtn" >Post</button>
+        <div class =whitehead>
+        {{form}}
+        </div>
+    <input style="margin: 50px 20px 20px 20px;" type="submit" value="Post">
 </form>
-
+          </div>
+</div>
 {% endblock %}
