--- a/static/fashionpointapp/form.css
+++ b/static/fashionpointapp/form.css
@@ -84,6 +84,15 @@ margin: 20px 20px 20px 100px;
 #id_picture{
 margin: 20px 20px 20px 100px;
 }
+
+#id_picture1{
+margin: 20px 20px 20px 100px;
+}
+
+#id_picture2{
+margin: 20px 20px 20px 100px;
+}
+
 #id_dateOfBirth{
 margin: 20px 20px 20px 20px;
 }
