--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -69,6 +69,7 @@
 
 /* Place the navbar at the bottom of the page, and make it stick */
 .navbar {
+  background-color: Red;
   position: fixed;
   overflow: hidden;
   bottom: 0;
