--- a/static/fashionpointapp/form.css
+++ b/static/fashionpointapp/form.css
@@ -5,6 +5,7 @@
 
 #formContent {
   border-radius: 10px 10px 10px 10px;
+  margin: 0px 0px 50px 0px;
   background: #fff;
   padding: 30px;
   width: 200%;
